@@ -1,0 +1,10 @@
+.. _ref-tools-email_:
+.. module:: trytond.tools.email_
+
+=====
+Email
+=====
+
+.. method:: set_from_header(message, sender, from\_)
+
+Fill email headers to appear at best from the address.
