@@ -55,6 +55,7 @@ from trytond.report import Report, get_email
 from trytond.rpc import RPC
 from trytond.sendmail import sendmail_transactional
 from trytond.tools import grouped_slice
+from trytond.tools.email_ import set_from_header
 from trytond.transaction import Transaction
 from trytond.url import host, http_host
 from trytond.wizard import Wizard, StateView, Button, StateTransition
@@ -93,7 +94,7 @@ def _send_email(from_, users, email_func):
             logger.info("Missing address for '%s' to send email", user.login)
             continue
         msg, title = email_func(user)
-        msg['From'] = from_ or from_cfg
+        set_from_header(msg, from_cfg, from_ or from_cfg)
         msg['To'] = user.email
         msg['Subject'] = Header(title, 'utf-8')
         sendmail_transactional(from_cfg, [user.email], msg)
